Update to 1.21
- Add ability to create condensed entries from stacks
- Pass registry access for entrypoint if needed
- Remove lexforge support
- Fix mixin target for neo