@@ -9,15 +9,18 @@ import io.wispforest.condensed_creative.registry.CondensedEntryRegistry;
 import net.minecraft.ChatFormatting;
 import net.minecraft.Util;
 import net.minecraft.core.Holder;
+import net.minecraft.core.HolderSet;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
+import net.minecraft.nbt.NbtOps;
+import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.resources.RegistryOps;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.BlockTags;
-import net.minecraft.tags.ItemTags;
-import net.minecraft.tags.PaintingVariantTags;
-import net.minecraft.tags.TagKey;
+import net.minecraft.tags.*;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.entity.MobCategory;
@@ -25,10 +28,8 @@ import net.minecraft.world.entity.decoration.Painting;
 import net.minecraft.world.entity.decoration.PaintingVariant;
 import net.minecraft.world.item.*;
 import net.minecraft.world.item.alchemy.Potion;
-import net.minecraft.world.item.alchemy.PotionUtils;
-import net.minecraft.world.item.alchemy.Potions;
-import net.minecraft.world.item.enchantment.Enchantment;
-import net.minecraft.world.item.enchantment.EnchantmentCategory;
+import net.minecraft.world.item.alchemy.PotionContents;
+import net.minecraft.world.item.component.CustomData;
 import net.minecraft.world.item.enchantment.EnchantmentInstance;
 import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.*;
@@ -39,6 +40,7 @@ import org.slf4j.Logger;
 import java.util.*;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 @CondensedCreativeInitializer.InitializeCondensedEntries
@@ -72,7 +74,7 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
     );
 
     @Override
-    public void registerCondensedEntries(boolean refreshed) {
+    public void registerCondensedEntries(boolean refreshed, RegistryAccess registryAccess) {
         if(!CondensedCreative.getConfig().defaultCCGroups) return;
 
 //        CondensedEntryRegistry.fromTag(CondensedCreative.createID("logs"), Blocks.OAK_LOG, ItemTags.LOGS)
@@ -80,12 +82,12 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
 //                .addToItemGroup(ItemGroups.BUILDING_BLOCKS);
 
         WoodType.values().forEach(signType -> {
-            ResourceLocation identifier = new ResourceLocation(signType.name());
+            ResourceLocation identifier = ResourceLocation.parse(signType.name());
 
             List<ItemStack> woodItemStacks = new ArrayList<>();
 
             WOOD_BLOCK_TYPES.forEach(blockType -> {
-                Item item = BuiltInRegistries.ITEM.get(new ResourceLocation(identifier.getNamespace(), blockType.apply(identifier.getPath()).replace("*", identifier.getPath())));
+                Item item = BuiltInRegistries.ITEM.get(ResourceLocation.fromNamespaceAndPath(identifier.getNamespace(), blockType.apply(identifier.getPath()).replace("*", identifier.getPath())));
 
                 if(item != Items.AIR) woodItemStacks.add(item.getDefaultInstance());
             });
@@ -116,16 +118,21 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
                 Map.entry("granite", Items.GRANITE),
                 Map.entry("diorite", Items.DIORITE),
                 Map.entry("andesite", Items.ANDESITE),
+                Map.entry("tuff", Items.TUFF),
+                //Map.entry("brick", Items.BRICKS),
+                Map.entry("mud", Items.PACKED_MUD),
                 Map.entry("sandstone", Items.SANDSTONE),
+                Map.entry("red_sandstone", Items.RED_SANDSTONE),
                 Map.entry("prismarine", Items.PRISMARINE),
                 Map.entry("deepslate", Items.DEEPSLATE),
+                Map.entry("nether_brick", Items.NETHER_BRICK),
                 Map.entry("blackstone", Items.BLACKSTONE),
                 Map.entry("end_stone", Items.END_STONE),
                 Map.entry("quartz", Items.QUARTZ_BLOCK),
                 Map.entry("copper", Items.COPPER_BLOCK));
 
         stoneTypes.forEach((type, startingItem) -> {
-            ResourceLocation identifier = new ResourceLocation(type);
+            ResourceLocation identifier = ResourceLocation.parse(type);
 
             List<ItemStack> stoneItemStacks = new ArrayList<>();
 
@@ -152,42 +159,21 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
         });
 
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("signs"), Items.OAK_SIGN, item -> fromTags(item, ItemTags.SIGNS, ItemTags.HANGING_SIGNS))
+        CondensedEntryRegistry.of(CondensedCreative.location("signs"), Items.OAK_SIGN, item -> fromTags(item, ItemTags.SIGNS, ItemTags.HANGING_SIGNS))
                 .addToItemGroup(CreativeModeTabs.FUNCTIONAL_BLOCKS);
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("infested_blocks"), Items.OAK_SIGN, item -> item instanceof BlockItem bi && bi.getBlock() instanceof InfestedBlock)
+        CondensedEntryRegistry.of(CondensedCreative.location("infested_blocks"), Items.OAK_SIGN, item -> item instanceof BlockItem bi && bi.getBlock() instanceof InfestedBlock)
                 .addToItemGroup(CreativeModeTabs.FUNCTIONAL_BLOCKS);
 
-        CondensedEntryRegistry.ofSupplier(CondensedCreative.createID("paintings"), Items.PAINTING, () -> {
-                    List<ItemStack> paintingVariantStacks = new ArrayList<>();
-
-                    BuiltInRegistries.PAINTING_VARIANT.holders()
-                            .filter(pv -> pv.is(PaintingVariantTags.PLACEABLE))
-                            .sorted(Comparator.comparing(
-                                    Holder::value,
-                                    Comparator.<PaintingVariant>comparingInt(pv -> pv.getHeight() * pv.getWidth()).thenComparing(PaintingVariant::getWidth)
-                            ))
-                            .forEach(paintingVariant -> {
-                                ItemStack itemStack = new ItemStack(Items.PAINTING);
-
-                                Painting.storeVariant(itemStack.getOrCreateTagElement("EntityTag"), paintingVariant);
-
-                                paintingVariantStacks.add(itemStack);
-                            });
-
-                    return paintingVariantStacks;
-                })
-                .addToItemGroup(CreativeModeTabs.FUNCTIONAL_BLOCKS);
-
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("wools"), Blocks.WHITE_WOOL, ItemTags.WOOL)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("wools"), Blocks.WHITE_WOOL, ItemTags.WOOL)
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.COLORED_BLOCKS);
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("terracotta"), Blocks.TERRACOTTA, ItemTags.TERRACOTTA)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("terracotta"), Blocks.TERRACOTTA, ItemTags.TERRACOTTA)
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.COLORED_BLOCKS);
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("concrete"), Blocks.WHITE_CONCRETE,
+        CondensedEntryRegistry.of(CondensedCreative.location("concrete"), Blocks.WHITE_CONCRETE,
                 (item) -> {
                     if(!(item instanceof BlockItem))return false;
 
@@ -198,7 +184,7 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.COLORED_BLOCKS);
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("concrete_powder"), Blocks.WHITE_CONCRETE_POWDER,
+        CondensedEntryRegistry.of(CondensedCreative.location("concrete_powder"), Blocks.WHITE_CONCRETE_POWDER,
                 (item) -> {
                     if(!(item instanceof BlockItem)) return false;
 
@@ -209,7 +195,7 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.COLORED_BLOCKS);
 
-        CondensedEntryRegistry.fromItems(CondensedCreative.createID("ores"), Blocks.IRON_ORE,
+        CondensedEntryRegistry.fromItems(CondensedCreative.location("ores"), Blocks.IRON_ORE,
                 Stream.of(Blocks.COAL_ORE, Blocks.DEEPSLATE_COAL_ORE,
                         Blocks.IRON_ORE, Blocks.DEEPSLATE_IRON_ORE,
                         Blocks.COPPER_ORE, Blocks.DEEPSLATE_COPPER_ORE,
@@ -222,7 +208,34 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
                 ).map(Block::asItem).toList())
                 .addToItemGroup(CreativeModeTabs.NATURAL_BLOCKS);
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("glass"), Blocks.WHITE_STAINED_GLASS,
+//        CondensedEntryRegistry.fromTag(CondensedCreative.location("dirt"), Blocks.DIRT, ItemTags.DIRT)
+//                .addToItemGroup(CreativeModeTabs.NATURAL_BLOCKS);
+
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("flowers"), Blocks.DANDELION, BlockTags.FLOWERS)
+                .addToItemGroup(CreativeModeTabs.NATURAL_BLOCKS);
+
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("saplings"), Blocks.OAK_SAPLING, BlockTags.SAPLINGS)
+                .addToItemGroup(CreativeModeTabs.NATURAL_BLOCKS);
+
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("leaves"), Blocks.OAK_LEAVES, BlockTags.LEAVES)
+                .addToItemGroup(CreativeModeTabs.NATURAL_BLOCKS);
+
+        CondensedEntryRegistry.ofSupplier(CondensedCreative.location("logs"), Blocks.OAK_LOG, () -> {
+                    var blockLookup = registryAccess.lookupOrThrow(Registries.BLOCK);
+
+                    return blockLookup.get(BlockTags.LOGS)
+                            .map(HolderSet.ListBacked::stream)
+                            .orElse(Stream.of())
+                            .filter(blockHolder -> {
+                                var path = blockHolder.unwrapKey().get().location().getPath();
+
+                                return !path.contains("stripped") && (path.contains("log") || path.contains("stem"));
+                            })
+                            .map(blockHolder -> blockHolder.value().asItem().getDefaultInstance()).toList();
+                })
+                .addToItemGroup(CreativeModeTabs.NATURAL_BLOCKS);
+
+        CondensedEntryRegistry.of(CondensedCreative.location("glass"), Blocks.WHITE_STAINED_GLASS,
                 (item) -> {
                     var path = BuiltInRegistries.ITEM.getKey(item).getPath();
 
@@ -233,37 +246,32 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
 
         //-------------------------------
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("carpets"), Blocks.WHITE_CARPET, ItemTags.WOOL_CARPETS)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("carpets"), Blocks.WHITE_CARPET, ItemTags.WOOL_CARPETS)
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.COLORED_BLOCKS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("candles"), Blocks.WHITE_CANDLE, ItemTags.CANDLES)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("candles"), Blocks.WHITE_CANDLE, ItemTags.CANDLES)
                 .toggleStrictFiltering(true)
                 .addToItemGroups(CreativeModeTabs.COLORED_BLOCKS, CreativeModeTabs.FUNCTIONAL_BLOCKS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("beds"), Blocks.WHITE_BED, ItemTags.BEDS)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("beds"), Blocks.WHITE_BED, ItemTags.BEDS)
                 .toggleStrictFiltering(true)
                 .addToItemGroups(CreativeModeTabs.COLORED_BLOCKS, CreativeModeTabs.FUNCTIONAL_BLOCKS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("banners"), Blocks.WHITE_BANNER, ItemTags.BANNERS)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("banners"), Blocks.WHITE_BANNER, ItemTags.BANNERS)
                 .toggleStrictFiltering(true)
                 .addToItemGroups(CreativeModeTabs.COLORED_BLOCKS, CreativeModeTabs.FUNCTIONAL_BLOCKS);
 
+        CondensedEntryRegistry.of(CondensedCreative.location("copper_bulbs"), Blocks.COPPER_BULB, item -> {
+                    return (item instanceof BlockItem blockItem && blockItem.getBlock() instanceof CopperBulbBlock);
+                })
+                .toggleStrictFiltering(true)
+                .addToItemGroups(CreativeModeTabs.FUNCTIONAL_BLOCKS);
 
-//        CondensedEntryRegistry.fromTag(CondensedCreative.createID("walls"), Blocks.COBBLESTONE_WALL, ItemTags.WALLS)
-//                .toggleStrictFiltering(true)
-//                .addToItemGroup(ItemGroups.BUILDING_BLOCKS);
-
-
-//        CondensedEntryRegistry.fromTag(CondensedCreative.createID("fences"), Blocks.OAK_FENCE, ItemTags.FENCES)
-//                .toggleStrictFiltering(true)
-//                .addToItemGroup(ItemGroups.BUILDING_BLOCKS);
-
-
-        CondensedEntryRegistry.of(CondensedCreative.createID("glass_panes"), Blocks.GLASS_PANE,
+        CondensedEntryRegistry.of(CondensedCreative.location("glass_panes"), Blocks.GLASS_PANE,
                 (item) -> {
                     var path = BuiltInRegistries.ITEM.getKey(item).getPath();
 
@@ -273,70 +281,71 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
                 .addToItemGroup(CreativeModeTabs.COLORED_BLOCKS);
 
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("corals"), Blocks.BRAIN_CORAL,
+        CondensedEntryRegistry.of(CondensedCreative.location("corals"), Blocks.BRAIN_CORAL,
                 predicateWithVanillaCheck((item) -> item instanceof BlockItem blockItem && blockItem.getBlock() instanceof BaseCoralPlantTypeBlock))
                 .addToItemGroup(CreativeModeTabs.NATURAL_BLOCKS);
 
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("glazed_terracotta"), Blocks.WHITE_GLAZED_TERRACOTTA,
+        CondensedEntryRegistry.of(CondensedCreative.location("glazed_terracotta"), Blocks.WHITE_GLAZED_TERRACOTTA,
                         predicateWithVanillaCheck((item) -> item instanceof BlockItem blockItem && blockItem.getBlock() instanceof GlazedTerracottaBlock))
                 .addToItemGroup(CreativeModeTabs.COLORED_BLOCKS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("shulkers"), Blocks.SHULKER_BOX, BlockTags.SHULKER_BOXES)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("shulkers"), Blocks.SHULKER_BOX, BlockTags.SHULKER_BOXES)
                 .toggleStrictFiltering(true)
                 .addToItemGroups(CreativeModeTabs.COLORED_BLOCKS, CreativeModeTabs.FUNCTIONAL_BLOCKS);
 
         //-------------------------------
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("buttons"), Blocks.STONE_BUTTON, ItemTags.BUTTONS)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("buttons"), Blocks.STONE_BUTTON, ItemTags.BUTTONS)
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.REDSTONE_BLOCKS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("pressure_plates"), Blocks.STONE_PRESSURE_PLATE, BlockTags.PRESSURE_PLATES)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("pressure_plates"), Blocks.STONE_PRESSURE_PLATE, BlockTags.PRESSURE_PLATES)
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.REDSTONE_BLOCKS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("doors"), Blocks.IRON_DOOR, BlockTags.DOORS)
-                .toggleStrictFiltering(true)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("doors"), Blocks.IRON_DOOR, BlockTags.DOORS)
+                .toggleStrictFiltering(false)
                 .addToItemGroup(CreativeModeTabs.REDSTONE_BLOCKS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("trapdoors"), Blocks.IRON_TRAPDOOR, BlockTags.TRAPDOORS)
-                .toggleStrictFiltering(true)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("trapdoors"), Blocks.IRON_TRAPDOOR, BlockTags.TRAPDOORS)
+                .toggleStrictFiltering(false)
                 .addToItemGroup(CreativeModeTabs.REDSTONE_BLOCKS);
 
-
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("fence_gates"), Blocks.OAK_FENCE_GATE, BlockTags.FENCE_GATES)
-                .toggleStrictFiltering(true)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("fence_gates"), Blocks.OAK_FENCE_GATE, BlockTags.FENCE_GATES)
+                .toggleStrictFiltering(false)
                 .addToItemGroup(CreativeModeTabs.REDSTONE_BLOCKS);
 
         //-------------------------------
 
-        CondensedEntryRegistry.of(CondensedCreative.createID(MobCategory.CREATURE.toString().toLowerCase()), Items.BEE_SPAWN_EGG,
-                        isSpawnEggItem(spawnEggItem -> creatures.contains(spawnEggItem.getType(null).getCategory())))
+        CondensedEntryRegistry.of(CondensedCreative.location(MobCategory.CREATURE.toString().toLowerCase()), Items.BEE_SPAWN_EGG,
+                        isSpawnEggItem(spawnEggItem -> creatures.contains(spawnEggItem.getType(ItemStack.EMPTY).getCategory())))
                 .addToItemGroup(CreativeModeTabs.SPAWN_EGGS);
 
-        CondensedEntryRegistry.of(CondensedCreative.createID(MobCategory.MONSTER.toString().toLowerCase()), Items.ZOMBIE_SPAWN_EGG,
-                        isSpawnEggItem(spawnEggItem -> spawnEggItem.getType(null).getCategory() == MobCategory.MONSTER))
+        CondensedEntryRegistry.of(CondensedCreative.location(MobCategory.MONSTER.toString().toLowerCase()), Items.ZOMBIE_SPAWN_EGG,
+                        isSpawnEggItem(spawnEggItem -> spawnEggItem.getType(ItemStack.EMPTY).getCategory() == MobCategory.MONSTER))
                 .addToItemGroup(CreativeModeTabs.SPAWN_EGGS);
 
-        CondensedEntryRegistry.of(CondensedCreative.createID(MobCategory.MISC.toString().toLowerCase()), Items.VILLAGER_SPAWN_EGG,
-                        isSpawnEggItem(spawnEggItem -> spawnEggItem.getType(null).getCategory() == MobCategory.MISC))
+        CondensedEntryRegistry.of(CondensedCreative.location(MobCategory.MISC.toString().toLowerCase()), Items.VILLAGER_SPAWN_EGG,
+                        isSpawnEggItem(spawnEggItem -> spawnEggItem.getType(ItemStack.EMPTY).getCategory() == MobCategory.MISC))
                 .addToItemGroup(CreativeModeTabs.SPAWN_EGGS);
 
 //        CondensedEntryRegistry.of(CondensedCreative.createID("spawn_eggs"), Items.AXOLOTL_SPAWN_EGG, item -> item instanceof SpawnEggItem)
 //                .addToItemGroup(ItemGroups.SPAWN_EGGS);
 
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("music_discs"), Items.MUSIC_DISC_13, ItemTags.MUSIC_DISCS)
+        CondensedEntryRegistry.of(CondensedCreative.location("music_discs"), Items.MUSIC_DISC_13, (item) -> item.components().has(DataComponents.JUKEBOX_PLAYABLE))
                 .addToItemGroup(CreativeModeTabs.TOOLS_AND_UTILITIES);
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("boats"), Items.OAK_BOAT, ItemTags.BOATS)
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("boats"), Items.OAK_BOAT, ItemTags.BOATS)
                 .toggleStrictFiltering(true)
                 .addToItemGroup(CreativeModeTabs.TOOLS_AND_UTILITIES);
+
+        addInstrumentEntries(registryAccess, Items.GOAT_HORN, InstrumentTags.GOAT_HORNS);
 
         CreativeModeTab combat = BuiltInRegistries.CREATIVE_MODE_TAB.get(CreativeModeTabs.COMBAT);
 
@@ -345,15 +354,15 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
         EntryTypeCondensing potion = CondensedCreative.getConfig().defaultEntriesConfig.potions;
 
         {
-            Set<ItemStack> stacks = ItemStackLinkedSet.createTypeAndTagSet();
+            Set<ItemStack> stacks = ItemStackLinkedSet.createTypeAndComponentsSet();
 
             for (SuspiciousEffectHolder susStewIngr : SuspiciousEffectHolder.getAllEffectHolders()) {
                 stacks.add(Util.make(new ItemStack(Items.SUSPICIOUS_STEW), stack -> {
-                    SuspiciousStewItem.appendMobEffects(stack, susStewIngr.getSuspiciousEffects());
+                    stack.set(DataComponents.SUSPICIOUS_STEW_EFFECTS, susStewIngr.getSuspiciousEffects());
                 }));
             }
 
-            CondensedEntryRegistry.fromItemStacks(CondensedCreative.createID("suspicious_stews"), stacks.iterator().next(), stacks)
+            CondensedEntryRegistry.fromItemStacks(CondensedCreative.location("suspicious_stews"), stacks.iterator().next(), stacks)
                     .addToItemGroup(CreativeModeTabs.FOOD_AND_DRINKS);
         }
 
@@ -365,57 +374,90 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
 
         //-------------------------------
 
-        CondensedEntryRegistry.fromItems(CondensedCreative.createID("dyes"), Items.WHITE_DYE,
+        CondensedEntryRegistry.fromItems(CondensedCreative.location("dyes"), Items.WHITE_DYE,
                 Arrays.stream(DyeColor.values())
-                        .map(dyeColor -> BuiltInRegistries.ITEM.get(new ResourceLocation(dyeColor.getName() + "_dye")))
+                        .map(dyeColor -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(dyeColor.getName() + "_dye")))
                         .filter(item -> item != Items.AIR)
                         .toList()
         ).addToItemGroup(CreativeModeTabs.INGREDIENTS);
 
-        addEnchantmentEntries();
+        addEnchantmentEntries(registryAccess);
 
-        CondensedEntryRegistry.fromTag(CondensedCreative.createID("pottery_sherds"), Items.ANGLER_POTTERY_SHERD, ItemTags.DECORATED_POT_SHERDS)
+        addPaintingEntries(registryAccess);
+
+        CondensedEntryRegistry.fromTag(CondensedCreative.location("pottery_sherds"), Items.ANGLER_POTTERY_SHERD, ItemTags.DECORATED_POT_SHERDS)
                 .addToItemGroup(CreativeModeTabs.INGREDIENTS);
 
-        CondensedEntryRegistry.of(CondensedCreative.createID("templates"), Items.NETHERITE_UPGRADE_SMITHING_TEMPLATE, i -> i instanceof SmithingTemplateItem)
+        CondensedEntryRegistry.of(CondensedCreative.location("templates"), Items.NETHERITE_UPGRADE_SMITHING_TEMPLATE, i -> i instanceof SmithingTemplateItem)
                 .addToItemGroup(CreativeModeTabs.INGREDIENTS);
 
         //---------------------
     }
 
-    private static void addEnchantmentEntries(){
+    private static void addPaintingEntries(RegistryAccess registryAccess) {
+        RegistryOps<Tag> registryOps = registryAccess.createSerializationContext(NbtOps.INSTANCE);
+
+        List<ItemStack> paintingVariantStacks = new ArrayList<>();
+
+        registryAccess.lookupOrThrow(Registries.PAINTING_VARIANT).listElements()
+                .filter(holder -> holder.is(PaintingVariantTags.PLACEABLE))
+                .sorted(Comparator.comparing(Holder::value, Comparator.comparingInt(PaintingVariant::area).thenComparing(PaintingVariant::width)))
+                .forEach((reference) -> {
+                    CustomData customData = CustomData.EMPTY.update(registryOps, Painting.VARIANT_MAP_CODEC, reference)
+                            .getOrThrow()
+                            .update((compoundTag) -> compoundTag.putString("id", "minecraft:painting"));
+
+                    var itemStack = new ItemStack(Items.PAINTING);
+                    itemStack.set(DataComponents.ENTITY_DATA, customData);
+                    paintingVariantStacks.add(itemStack);
+                });
+
+        CondensedEntryRegistry.fromItemStacks(CondensedCreative.location("paintings"), Items.PAINTING, paintingVariantStacks).addToItemGroup(CreativeModeTabs.FUNCTIONAL_BLOCKS);
+    }
+
+    private static void addInstrumentEntries(RegistryAccess registryAccess, Item item, TagKey<Instrument> instrumentTag) {
+        var instrumentLookup = registryAccess.lookupOrThrow(Registries.INSTRUMENT);
+
+        List<ItemStack> instrumentStacks = instrumentLookup.get(instrumentTag)
+                .map(tagHolderSet -> tagHolderSet.stream().map(instrument -> InstrumentItem.create(item, instrument)).toList())
+                .orElse(List.of());
+
+        if(instrumentStacks.isEmpty()) return;
+
+        CondensedEntryRegistry.fromItemStacks(CondensedCreative.location(instrumentTag.location().getPath()), instrumentStacks.getFirst(), instrumentStacks)
+                .toggleStrictFiltering(true)
+                .addToItemGroup(CreativeModeTabs.TOOLS_AND_UTILITIES);
+    }
+
+    private static void addEnchantmentEntries(RegistryAccess registryAccess) {
         EntryTypeCondensing entryTypeCondensing = CondensedCreative.getConfig().defaultEntriesConfig.enchantmentBooks;
 
         if(entryTypeCondensing == EntryTypeCondensing.NONE) return;
 
-        Set<EnchantmentCategory> targets = EnumSet.allOf(EnchantmentCategory.class);
-
         List<ItemStack> allEnchantmentBooks = new ArrayList<>();
 
-        for (Enchantment enchantment : BuiltInRegistries.ENCHANTMENT) {
-            if (!targets.contains(enchantment.category)) continue;
+        registryAccess.lookupOrThrow(Registries.ENCHANTMENT).listElements().forEach((reference) -> {
+            var enchantment = reference.value();
 
-            List<ItemStack> enchantmentBooks = new ArrayList<>();
-
-            for (int i = enchantment.getMinLevel(); i <= enchantment.getMaxLevel(); ++i) {
-                enchantmentBooks.add(EnchantedBookItem.createForEnchantment(new EnchantmentInstance(enchantment, i)));
-            }
+            var enchantmentBooks = IntStream.rangeClosed(enchantment.getMinLevel(), enchantment.getMaxLevel())
+                    .mapToObj((i) -> EnchantedBookItem.createForEnchantment(new EnchantmentInstance(reference, i)))
+                    .toList();
 
             if(entryTypeCondensing == EntryTypeCondensing.SEPARATE_COLLECTIONS){
-                MutableComponent mutableText = Component.translatable(enchantment.getDescriptionId());
+                MutableComponent mutableText = Component.empty().append(enchantment.description());
 
                 mutableText.withStyle(ChatFormatting.WHITE);
 
-                CondensedEntryRegistry.fromItemStacks(CondensedCreative.createID(enchantment.getDescriptionId()), enchantmentBooks.get(0), enchantmentBooks)
+                CondensedEntryRegistry.fromItemStacks(CondensedCreative.location(reference.key().location().getPath()), enchantmentBooks.getFirst(), enchantmentBooks)
                         .setTitle(mutableText)
                         .addToItemGroup(CreativeModeTabs.INGREDIENTS);
             } else {
                 allEnchantmentBooks.addAll(enchantmentBooks);
             }
-        }
+        });
 
         if(!allEnchantmentBooks.isEmpty()){
-            CondensedEntryRegistry.fromItemStacks(CondensedCreative.createID("enchantment_books"), Items.ENCHANTED_BOOK, allEnchantmentBooks)
+            CondensedEntryRegistry.fromItemStacks(CondensedCreative.location("enchantment_books"), Items.ENCHANTED_BOOK, allEnchantmentBooks)
                     .addToItemGroup(CreativeModeTabs.INGREDIENTS);
         }
     }
@@ -423,30 +465,32 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
     private static void addPotionBasedEntries(Item potionBasedItem, CreativeModeTab targetGroup, int wordIndex, String pluralizedWord, EntryTypeCondensing entryTypeCondensing){
         if(entryTypeCondensing == EntryTypeCondensing.NONE) return;
 
-        Map<List<MobEffect>, List<Potion>> sortedPotions = new LinkedHashMap<>();
+        Map<List<MobEffect>, List<Holder<Potion>>> sortedPotions = new LinkedHashMap<>();
 
-        for (Potion potion : BuiltInRegistries.POTION) {
-            if (potion == Potions.EMPTY) continue;
+        BuiltInRegistries.POTION.holders().forEach(potion -> {
+            //if (potion.value() == Potions.WATER.value()) return;
 
-            List<MobEffect> effects = potion.getEffects().stream()
-                    .map(MobEffectInstance::getEffect).toList();
+            List<MobEffect> effects = potion.value().getEffects().stream()
+                    .map(MobEffectInstance::getEffect)
+                    .map(Holder::value)
+                    .toList();
 
             sortedPotions.computeIfAbsent(effects, statusEffects -> new ArrayList<>()).add(potion);
-        }
+        });
 
         List<ItemStack> allPotionItems = new ArrayList<>();
 
-        sortedPotions.forEach((statusEffects, potions) -> {
+        for (var potions : sortedPotions.values()) {
             List<ItemStack> potionItems = new ArrayList<>();
 
-            potions.forEach(p -> potionItems.add(PotionUtils.setPotion(new ItemStack(potionBasedItem), p)));
+            potions.forEach(p -> potionItems.add(PotionContents.createItemStack(potionBasedItem, p)));
 
             if (potionItems.isEmpty()) return;
 
             if(entryTypeCondensing == EntryTypeCondensing.SEPARATE_COLLECTIONS) {
-                String translationKey = potionItems.get(0).getDescriptionId();
+                String translationKey = potionItems.getFirst().getDescriptionId();
 
-                CondensedEntryRegistry.fromItemStacks(CondensedCreative.createID(translationKey), potionItems.get(0), potionItems)
+                CondensedEntryRegistry.fromItemStacks(CondensedCreative.location(translationKey), potionItems.getFirst(), potionItems)
                         .setTitleSupplier(() -> {
                             String[] words = Component.translatable(translationKey).getString()
                                     .split(" ");
@@ -460,7 +504,7 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
             } else {
                 allPotionItems.addAll(potionItems);
             }
-        });
+        }
 
         if(!allPotionItems.isEmpty()){
             ResourceLocation itemId = BuiltInRegistries.ITEM.getKey(potionBasedItem);
@@ -471,7 +515,7 @@ public class BuiltinEntries implements CondensedCreativeInitializer {
 
             String path = StringUtils.join(words, "_");
 
-            CondensedEntryRegistry.fromItemStacks(CondensedCreative.createID(path), potionBasedItem, allPotionItems)
+            CondensedEntryRegistry.fromItemStacks(CondensedCreative.location(path), potionBasedItem, allPotionItems)
                     .addToItemGroup(targetGroup);
         }
     }
